List URLs to download and download them with an external tool; chrome slows down too much using the old method

--- a/chrome_extensions/tumblr_images/manifest.json
+++ b/chrome_extensions/tumblr_images/manifest.json
@@ -3,9 +3,10 @@
   "version": "1.0",
   "manifest_version": 2,
   "description": "Download highest res version of a tumblr image just by clicking on it.",
-  "permissions": ["http://*.tumblr.com/*", "https://*.tumblr.com/*"],
+  "permissions": ["http://*.tumblr.com/archive*", "https://*.tumblr.com/archive*"],
   "content_scripts": [{
-    "matches": ["http://*.tumblr.com/*", "https://*.tumblr.com/*"],
+    "matches": ["http://*.tumblr.com/archive*", "https://*.tumblr.com/archive*"],
+    "css": ["css.css"],
     "js": ["js.js"],
     "all_frames": true
   }]
