--- a/chrome_extensions/reddit_popups/manifest.json
+++ b/chrome_extensions/reddit_popups/manifest.json
@@ -8,7 +8,7 @@
     "http://reddit.com/*"
   ],
   "content_scripts": [{
-    "matches": ["http://*/*"],
+    "matches": ["http://reddit.com/*", "http://www.reddit.com/*", "https://reddit.com/*", "https://www.reddit.com/*"],
     "js": ["js.js"]
   }]
 }
